- [#5235] Explicitly provide the configuration check namespaces
- [#5389] Crash when confirming/canceling an event with time-slots
- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5521] Rename tx_seminars_BackEnd_OrganizersList to Tx_Seminars_BackEnd_OrganizersList
- [#5520] Rename tx_seminars_BackEnd_Module to Tx_Seminars_BackEnd_Module
- [#5518] Rename tx_seminars_BackEnd_GeneralEventMailForm to Tx_Seminars_BackEnd_GeneralEventMailForm
- [#5516] Rename tx_seminars_BackEnd_EventsList into Tx_Seminars_BackEnd_EventsList
- [#5530] Rename tx_seminars_Bag_Organizer to Tx_Seminars_Bag_Organizer
- [#5516] Rename tx_seminars_BackEnd_ConfirmEventMailForm to Tx_Seminars_BackEnd_ConfirmEventMailForm
- [#5508] Rename tx_oelib_Model_BackEndUser to Tx_Oelib_Model_BackEndUser
- [#5510] Rename tx_oelib_List to Tx_Oelib_List
- [#5486] Rename tx_oelib_BackEndLoginManager to Tx_Oelib_BackEndLoginManager
- [#5509] Rename tx_oelib_Model_BackEndUserGroup to Tx_Oelib_Model_BackEndUserGroup
- [#5506] Rename tx_oelib_Model to Tx_Oelib_Model
- [#5503] Rename tx_oelib_PageFinder to Tx_Oelib_PageFinder
- [#5507] Rename tx_oelib_Mapper_BackEndUser to Tx_Oelib_Mapper_BackEndUser
- [#5526] Rename tx_seminars_tests_fixtures_BackEnd_TestingEventMailForm
- [#5495] Rename tx_oelib_Visibility_Tree to Tx_Oelib_Visibility_Tree
- [#5493] Rename tx_oelib_ViewHelper_Price to Tx_Oelib_ViewHelper_Price
- [#5492] Rename tx_oelib_Mapper_Language to Tx_Oelib_Mapper_Language
- [#5491] Rename tx_oelib_Mapper_FrontEndUser to Tx_Oelib_Mapper_FrontEndUser
- [#5490] Rename tx_oelib_Mapper_FrontEndUserGroup to Tx_Oelib_Mapper_FrontEndUserGroup
- [#5488] Rename tx_oelib_Mapper_Currency to Tx_Oelib_Mapper_Currency
- [#5487] Rename tx_oelib_Mapper_Country to Tx_Oelib_Mapper_Country