@@ -12,6 +12,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5522] Rename tx_seminars_BackEnd_RegistrationsList to Tx_Seminars_BackEnd_RegistrationsList
 - [#5521] Rename tx_seminars_BackEnd_OrganizersList to Tx_Seminars_BackEnd_OrganizersList
 - [#5520] Rename tx_seminars_BackEnd_Module to Tx_Seminars_BackEnd_Module
 - [#5518] Rename tx_seminars_BackEnd_GeneralEventMailForm to Tx_Seminars_BackEnd_GeneralEventMailForm
